--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "react",
-  "version": "1.1.1",
+  "version": "3.0.0-alpha1",
   "main": "react.js",
   "ignore": [
     "node_modules",
