--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-client",
-  "version": "1.1.1",
-  "homepage": "http://atmosphere.github.io/react-js/",
-  "description": "React client for Node.js",
+  "version": "3.0.0-Alpha1",
+  "homepage": "http://atmosphere.github.io/react/",
+  "description": "React client for JavaScript",
   "main": "react.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/atmosphere/react-js.git"
+    "url": "https://github.com/atmosphere/react-javascript-client.git"
   },
   "keywords": [
     "realtime",
@@ -25,16 +25,15 @@
   },
   "license": "Apache License, Version 2.0",
   "bugs": {
-    "url": "https://github.com/atmosphere/react/issues"
+    "url": "https://github.com/atmosphere/react-javascript-client/issues"
   },
   "dependencies": {
-    "jsdom": "0.8.10",
+    "jsdom": "0.10.4",
     "ws": "0.4.31",
-    "eventsource": "0.0.10"
+    "eventsource": "0.1.0"
   },
   "devDependencies": {
-    "qunit": "0.5.18",
-    "send": "0.1.4",
-    "node-uuid": "1.4.1"
+    "mocha": "1.18.2",
+    "chai": "1.9.1"
   }
 }
