Fixes #10 - Provide a way to run the test in the browser
It looks ugly and not easy to integrate with CI but anyway it works and
needed to refactor react.js

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eventsource": "0.1.0"
   },
   "devDependencies": {
+    "http-proxy": "1.0.3",
     "mocha": "1.18.2",
     "chai": "1.9.1"
   }
