--- a/.jshintrc
+++ b/.jshintrc
@@ -1,14 +1,17 @@
 {
     "curly": true,
     "eqeqeq": true,
+    "es3": true,
+    "freeze": true,
     "immed" : true,
     "latedef": true,
+    "newcap": false,
     "noarg": true,
+    "nonbsp": true,
     "quotmark": "double",
     "undef": true,
     "unused": true,
     "trailing": true,
-    "boss": true,
     "eqnull": true,
     "browser": true,
     "node": true,
