--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "React client for JavaScript",
   "main": "react.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,8 @@
     "eventsource": "0.1.1"
   },
   "devDependencies": {
+    "react-protocol": "Atmosphere/react-protocol",
+    "grunt": "0.4.5",
     "http-proxy": "1.1.4",
     "mocha": "1.19.0",
     "chai": "1.9.1"
