Update the project website url

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vibe-client",
   "version": "3.0.0-Alpha1",
-  "homepage": "http://atmosphere.github.io/vibe/projects/vibe-javascript-client/",
+  "homepage": "http://vibe-project.github.io/projects/vibe-javascript-client/",
   "description": "Vibe client for JavaScript",
   "main": "vibe.js",
   "scripts": {
